apps/linkding/base/networking/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
  hostnames:
    - "linkding.athanor.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkding # Matches the Service name generated by the chart (HelmRelease manifest)
          port: 9090
